--- a/.github/workflows/codescan-build.yml
+++ b/.github/workflows/codescan-build.yml
@@ -18,14 +18,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
     
     - name: Configure AWS Credentials
       uses: aws-actions/configure-aws-credentials@v1
       with:
-        role-to-assume: arn:aws:iam::${{ secrets.account_id }}:role/my-github-actions-role-test
+        role-to-assume: arn:aws:iam::${{ secrets.ACCOUNT_ID }}:role/my-github-actions-role-test
         aws-region: us-west-2
