--- a/.github/workflows/codescan-build.yml
+++ b/.github/workflows/codescan-build.yml
@@ -9,6 +9,10 @@ on:
 jobs:
   code-analysis:
     runs-on: ubuntu-latest
+
+    permissions:
+      contents: 'read'
+      id-token: 'write'
     
     steps:
     - name: Checkout code
