--- a/.github/workflows/codescan-build.yml
+++ b/.github/workflows/codescan-build.yml
@@ -15,16 +15,31 @@ jobs:
       id-token: 'write'
     
     steps:
-    - name: Checkout code
+    - name: Checkout repository
       uses: actions/checkout@v2
+      with:
+        fetch-depth: 0 # This is a required field for CodeGuru
+    
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: us-west-2
 
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    
-    - name: Configure AWS Credentials
-      uses: aws-actions/configure-aws-credentials@v1
+        
+    - name: CodeGuru Reviewer
+      uses: aws-actions/codeguru-reviewer@v1.1
       with:
-        role-to-assume: arn:aws:iam::${{ secrets.ACCOUNT_ID }}:role/my-github-actions-role-test
-        aws-region: us-west-2
+        build_path: target
+        s3_bucket: codeguru-reviewer-test-repo
+
+    - name: Upload review result
+      if: ${{ github.event_name != 'push' }}
+      uses: github/codeql-action/upload-sarif@v1
+      with:
+        sarif_file: codeguru-results.sarif.json # Your results file will be named codeguru-results.sarif.json
