--- a/.github/workflows/codescan-build.yml
+++ b/.github/workflows/codescan-build.yml
@@ -43,4 +43,4 @@ jobs:
       # if: ${{ github.event_name != 'push' }}
       uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: codeguru-results.sarif # Your results file will be named codeguru-results.sarif
+        sarif_file: codeguru-results.sarif.json # Your results file will be named codeguru-results.sarif.json
