--- a/.github/workflows/codescan-build.yml
+++ b/.github/workflows/codescan-build.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
       - codescan
+  pull_request:
+    branches:
+      - main 
+      - codescan
 
 jobs:
   code-analysis:
@@ -40,7 +44,6 @@ jobs:
         s3_bucket: codeguru-reviewer-test-repo
 
     - name: Upload review result
-      # if: ${{ github.event_name != 'push' }}
       uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: codeguru-results.sarif.json # Your results file will be named codeguru-results.sarif.json
+        sarif_file: codeguru-results.sarif.json # Results file will be named codeguru-results.sarif.json
