--- a/.github/workflows/codescan-build.yml
+++ b/.github/workflows/codescan-build.yml
@@ -41,9 +41,10 @@ jobs:
     - name: CodeGuru Reviewer
       uses: aws-actions/codeguru-reviewer@v1.1
       with:
-        s3_bucket: codeguru-reviewer-test-repo
+        s3_bucket: codeguru-reviewer-results-bucket
 
     - name: Upload review result
+      if: ${{ github.event_name != 'push' }}
       uses: github/codeql-action/upload-sarif@v2
       with:
         sarif_file: codeguru-results.sarif.json # Results file will be named codeguru-results.sarif.json
