--- a/.github/workflows/codescan-build.yml
+++ b/.github/workflows/codescan-build.yml
@@ -46,7 +46,7 @@ jobs:
         s3_bucket: codeguru-reviewer-results-bucket-do-not-delete
     
     - name: Print value of pull_request.files
-      run: echo "pull_request.files: ${{ github.event.pull_request.files }}"
+      run: echo "pull_request.files are - ${{ github.event.pull_request.files }}"
 
     - name: Filter results
       run: |
