--- a/.github/workflows/codescan-build.yml
+++ b/.github/workflows/codescan-build.yml
@@ -45,7 +45,8 @@ jobs:
         echo "This is a pull request event"
         echo "pull_request.files - ${{ github.event.pull_request.files }}"
 
-
+    - name: List the changed files
+      run: ls -lR
 
     # - name: CodeGuru Reviewer
     #   uses: aws-actions/codeguru-reviewer@v1.1
