--- a/.github/workflows/codescan-build.yml
+++ b/.github/workflows/codescan-build.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
       with:
-        ref: ${{ github.event.pull_request.head.ref }}
+        # ref: ${{ github.event.pull_request.head.ref }}
         fetch-depth: 0 # This is a required field for CodeGuru
     
     - name: Configure AWS Credentials
