--- a/.github/workflows/codescan-build.yml
+++ b/.github/workflows/codescan-build.yml
@@ -24,7 +24,7 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
       with:
-        # ref: ${{ github.event.pull_request.head.ref }}
+        ref: ${{ github.event.pull_request.head.sha }}
         fetch-depth: 0 # This is a required field for CodeGuru
     
     - name: Configure AWS Credentials
@@ -38,32 +38,40 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.7
-    
-    - name: Get changed files
-      uses: tj-actions/changed-files@v35
-      id: changed_files
 
-    - name: List all changed files
+    # - uses: actions/checkout@v2.1.0
+    - name: Check changed files
+      uses: jitterbit/get-changed-files@v1
+      id: changed_files
+    
+    - name: Printing
       run: |
-        for file in ${{ steps.changed-files.outputs.all_changed_files }}; do
-          echo "$file was changed"
-        done   
+        echo "Modified and Added Files"
+        echo "${{ steps.abc.outputs.added_modified }}"
+
+    
+    # - name: Get changed files
+    #   uses: tj-actions/changed-files@v35
+    #   id: changed_files   
+
 
     # - name: CodeGuru Reviewer
     #   uses: aws-actions/codeguru-reviewer@v1.1
     #   with:
-    #     # source_commit: 
+    #     source_commit: ${{ github.event.pull_request.head.sha }}
     #     s3_bucket: codeguru-reviewer-results-bucket-do-not-delete
 
     # - name: Filter results
     #   run: |
     #     CHANGED_FILES=$(echo "${{ steps.changed_files.outputs.files }}")
-    #     jq "select(.tool.name == \"AWS CodeGuru Reviewer\") | .results[] | select(.location.physicalLocation.artifactLocation.uri | test(\"$CHANGED_FILES\"))" codeguru-results.sarif.json > filtered-results.sarif.json
-    #   env:
-    #     GITHUB_EVENT_NAME: ${{ env.GITHUB_EVENT_NAME }}
-    #     GITHUB_EVENT_PATH: ${{ env.GITHUB_EVENT_PATH }}
+    #     jq "select(.tool.driver.name == \"AWSCodeGuruReviewer\") | .runs[] | select(.locations[].physicalLocation.artifactLocation.uri | inside(env.CHANGED_FILES)) | select(.resultLevel != \"note\")" codeguru-results.sarif.json > filtered-results.txt
+
+    # - name: Convert to JSON
+    #   run: cat filtered-results.txt | jq -R 'split("\n") | {files - .}'
 
     # - name: Upload filtered results
-    #   uses: github/codeql-action/upload-sarif@v2
+    #   uses: actions/upload-artifact@v2
     #   with:
-    #     sarif_file: filtered-results.sarif.json
+    #     name: filtered-results
+    #     path: filtered-results.sarif.json
+
