--- a/.github/workflows/codescan-build.yml
+++ b/.github/workflows/codescan-build.yml
@@ -29,6 +29,7 @@ jobs:
         path: ${{ join(github.event.pull_request.changed_files, ',') }}
 
     - name: List modified files
+      working-directory: ${{ github.workspace }}
       run: |
         echo "Modified files:"
         git diff --name-only main...${{ github.event.pull_request.head.sha }} --
