--- a/.github/workflows/codescan-build.yml
+++ b/.github/workflows/codescan-build.yml
@@ -32,7 +32,7 @@ jobs:
       working-directory: ${{ github.workspace }}
       run: |
         echo "List Files path:"
-        ls
+        pwd
         echo "Modified files:"
         git diff --name-only main...${{ github.event.pull_request.head.sha }} --
 
